<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dvQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_quiz_form">Quiz Form</string>
    <string name="action_add_quiz">Add Quiz</string>
    <string name="action_add_category">Add Category</string>
    <string name="action_submit_answers">Submit Answers</string>
    <string name="title_activity_category_form">Category</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="info_object_successfully_delete">%s successfully deleted.</string>
    <string name="error_object_already_exists">That %s already exists!</string>
    <string name="go">Go</string>
    <string name="previous">Previous</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="select_a_question">Select a Question</string>
    <string name="select_a_category">Select a Category</string>
    <string name="select_a_file">Select a File</string>
    <string name="no_file_selected"><i>No file selected</i></string>
    <string name="title_activity_quiz_result">Quiz Result</string>
    <string name="title_activity_about">About</string>
    <string name="app_version">0.1.1/20140324-alpha</string>
    <string name="daniffig_email">daniffig@gmail.com</string>
    <string name="app_homepage">https://github.com/daniffig/dv-quiz</string>
    <string name="Homepage">Homepage</string>

</resources>
